[[bench]]
  harness = false
  name = 'takumi'

[dependencies]
  async-trait = '0.1'
  bytes = '1.0'
  dyn-clone = '1.0'
  futures-util = '0.3'
  imageproc = '0.25'
  merge = '0.2'
  ts-rs = '11.0'
  typetag = '0.2'
  woff2-patched = '0.4'

  [dependencies.cosmic-text]
    features = ['shape-run-cache', 'hashbrown']
    version = '0.14'

  [dependencies.image]
    default-features = false
    features = ['jpeg', 'png', 'webp']
    version = '0.25'

  [dependencies.serde]
    features = ['derive']
    version = '1'

  [dependencies.taffy]
    features = ['serde']
    version = '0.8'

[dev-dependencies]
  [dev-dependencies.criterion]
    features = ['html_reports']
    version = '0.6'

[package]
  description = 'High-performance Rust library for generating images with CSS Flexbox-like layouts.'
  edition = '2024'
  exclude = ['benches/**/*']
  keywords = ['image', 'css', 'flexbox', 'layout', 'rendering']
  license = 'MIT'
  name = 'takumi'
  readme = 'README.md'
  repository = 'https://github.com/kane50613/takumi'
  version = '0.2.0'
